test(user): Написал тесты для user-service
- покрыл контроллеры и сервисы